--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-   @apply m-0 p-0 box-border bg-[#f2f2f2]
+body {
+  @apply m-0 p-0 box-border bg-[#f2f2f2];
 }
