--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,25 +1,25 @@
 .headerWrapper {
-  @apply px-[40px] py-[15px]  top-0;
+  @apply px-[40px] py-[15px] sticky top-0 left-0 bg-[#3242aa] h-[100px];
 }
 .headerFlex {
-  @apply flex justify-between;
+  @apply flex justify-between pt-5;
 }
 .headerFlex-1 {
   @apply flex;
 }
 .headerLogo {
-  @apply text-[24px] font-semibold text-[#424242] mr-auto;
+  @apply text-[24px] font-semibold text-[#f2f2f2] mr-auto;
 }
 .headerMenu-icon {
   display: none !important;
-  @apply w-10 h-10 text-[#424242] !important;
+  @apply w-10 h-10 text-[#f2f2f2] cursor-pointer !important;
 }
 .menuContent {
-  @apply flex text-[#424242]  mr-[-20px] mt-[-10px] h-[70px];
+  @apply flex text-[#f2f2f2]  mr-[-20px] mt-[-30px] h-[70px];
 }
 .cancel {
   display: none !important;
-  @apply float-right text-white !important;
+  @apply float-right w-10 h-10 text-[#f2f2f2] cursor-pointer !important ;
 }
 .menuContent-text {
   @apply text-[30px] ml-1 border-b-[1px] mt-[18px] !important;
@@ -29,29 +29,22 @@
   @apply cursor-pointer border-b-[3px] border-[#3242aa] !important;
 }
 .menuItems {
-  @apply font-semibold text-[18px] !important;
+  @apply font-semibold text-[18px] border-blue-200 border-4 !important;
 }
 @media (max-width: 768px) {
   .headerWrapper {
     @apply px-[20px] py-[10px];
   }
-  .menuContent {
-    margin-bottom: -250px !important;
-    display: none;
-    @apply flex-col rounded-[5px] w-32 h-40 bg-[#232323] text-center mt-2 pt-1 ml-[-40px];
-  }
   .cancel {
     display: block !important;
+  }
+  .menuContent{
+    display: none;
   }
   .menuContent-text {
     @apply border-b-[1px] border-white text-[12px] text-white rounded-[5px] mt-0 !important;
   }
   .headerMenu-icon {
     display: block !important;
-  }
-}
-@media (max-width: 600px) {
-  .menuContent-text {
-    @apply text-[5px] mt-[-12px] !important;
   }
 }
