--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,20 +1,24 @@
 .aboutWrapper {
   margin: 0 auto;
-  @apply w-[70%] h-[40%] mt-[24px];
+  padding: 0 20px;
+  background-color: #111;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  @apply w-[100%] h-[100%] mt-[24px];
 }
 .aboutTitle {
-  @apply text-[20px] text-[#424242] font-semibold mb-[24px];
+  @apply text-[24px] text-center text-[#3242aa] font-semibold mb-[16px];
 }
 .aboutDetails {
-  line-height: 26px;
+  line-height: 32px;
   box-shadow: -2px 0px 15px 7px rgba(0, 0, 0, 0.14);
   -webkit-box-shadow: -2px 0px 15px 7px rgba(0, 0, 0, 0.14);
   -moz-box-shadow: -2px 0px 15px 7px rgba(0, 0, 0, 0.14);
-  @apply p-10 text-[#424242] rounded-2xl text-[16px];
+  @apply p-2 text-[#f2f2f2] max-w-[70%] mx-auto rounded-2xl text-[20px] text-center;
 }
-@media (max-width: 425px) {
-    .aboutWrapper {
-        margin: 0 auto;
-        @apply w-[90%];
-      }
+@media (max-width: 768px) {
+  .aboutDetails {
+    @apply max-w-[95%];
+  }
 }
