--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -9,10 +9,12 @@
   @apply flex justify-between;
 }
 .footer-icons {
+  box-shadow: 2px 3px 5px #3242aa;
   @apply mx-4 cursor-pointer w-[40px] h-[40px] rounded-md;
 }
 
 .footer-copyright {
+  color: #3242aa;
   @apply text-center mt-[40px];
 }
 @media (max-width: 400px) {
