--- a/src/components/projects/Project.css
+++ b/src/components/projects/Project.css
@@ -1,85 +1,68 @@
 .projectsWrapper{
-    width: 100%;
-    background-color: #111;
-    margin: 120px auto;
+  border-bottom: 1px solid #3242aa;
+  padding: 100px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
-.projectsContents {
+.projectsContents{
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding-top: 10px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-.projectsSub-title_div {
-  background-color: #f2f2f2;
+.projectsTitle{
+  font-family: "Permanent Marker", cursive;
+  font-size: 24px;
+  text-align: center;
+  color: #3242aa;
+  margin: 70px;
+}
+.projectsContent{
+  color: #f2f2f2;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 70px auto;
-  margin-bottom: 40px;
-  width: 40%;
-  border-top: 5px solid #111;
-  border-bottom: 5px solid #111;
+  border: 1px solid #3242aa;
+  font-size: 10px;
+  padding: 7px;
+  margin: 10px;
+  border-radius: 4px;
 }
-.projectsSub-title {
-  font-family: "Permanent Marker", cursive;
-  color: #3242aa;
-  padding: 5px 10px;
-  font-size: 12px;
-  font-weight: 700;
+.projectsImg{
+  width: 200px;
+  height: 200px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 1px 3px #3242aa;
 }
-.projectsContent {
-  width: 70%;
+.projectsGithub-name, .projectsName{
+  text-align: center;
+  padding-top: 5px;
+}
+
+.projectsSearch-link_div{
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-between;
-  border-radius: 10px;
-  background-color: #3242aa;
-  margin: 20px 30px;
-  min-width: fit-content;
-  animation: projectsContent 2s infinite;
+  align-items: center;
+  justify-content: center;
 }
-@keyframes projectsContent {
-  0% {
-    margin-top: 0.5px;
+.projectsSearch-link_div{
+  text-align: center;
+}
+.projectsSearch-img{
+  width: 20px !important;
+  height: 20px !important;
+  color: #3242aa !important;
+}
+@media (max-width: 768px) {
+  .projectsContents{
+    grid-template-columns: 1fr 1fr;
   }
-  100% {
-    margin-top: 0;
-  }
 }
-.projectsContent:hover {
-  margin: 30px 5px;
-}
-.projectsIndex {
-  font-size: 32px;
-  color: #f2f2f2;
-  border-radius: 7px;
-  margin: 5px 5px;
-}
-.projectsDiv {
-  min-height: 280px;
-  padding: 10px 5px;
-  background-color: #ddd;
-  max-width: fit-content;
-  margin: 7px 5px;
-  min-height: fit-content;
-  border-radius: 3px;
-}
-.projectsProject-name {
-  font-size: 24px;
-  font-weight: 600;
-}
-.projectsLabel {
-  color: #3242aa;
-}
-@media screen and (max-width: 600px) {
-  .projectsContents {
+@media (max-width: 481px) {
+  .projectsContents{
     grid-template-columns: 1fr;
   }
-}
-@media screen and (max-width: 385px) {
-  .projectsContent {
-    width: 100%;
-    margin: 20px 0;
+  .projectsTitle{
+    font-size: 16px;
   }
 }
