--- a/src/components/smallScreenNavbar/SmallScreenNavbar.css
+++ b/src/components/smallScreenNavbar/SmallScreenNavbar.css
@@ -3,10 +3,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #111;
+  background-color: #ccc;
   position: fixed;
   width: 100%;
   display: flex;
+  height: 100%;
 }
 .smallScreen-navbar_link {
   font-size: 24px;
