--- a/src/index.css
+++ b/src/index.css
@@ -10,15 +10,15 @@ body{
   font-family: "Roboto", sans-serif;
 }
 body::-webkit-scrollbar {
-  width: 15px; /* width of the entire scrollbar */
+  width: 15px; 
 }
 
 body::-webkit-scrollbar-track {
-  background: #323232; /* color of the tracking area */
+  background: #323232; 
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #3242aa; /* color of the scroll thumb */
-  border-radius: 20px; /* roundness of the scroll thumb */
-  border: 3px solid #323232; /* creates padding around scroll thumb */
+  background-color: #3242aa; 
+  border-radius: 20px; 
+  border: 3px solid #323232; 
 }
