--- a/src/components/techWriting/TechWriting.css
+++ b/src/components/techWriting/TechWriting.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 100px;
 }
 .techWriting-main_title {
   color: #3242aa;
@@ -16,6 +17,7 @@
   font-family: "Permanent Marker", cursive;
   margin-bottom: 150px;
   margin-top: -70px;
+  text-align: center;
 }
 .techWriting-title {
   background-color: #fff;
