--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -39,7 +39,19 @@
   color: #3242aa;
   border: 1px solid #ccc;
   margin-left: 9px;
-  transition: all 0.3s;
+  transition: all 4s;
+}
+#main2-btn{
+  margin-top: -10px;
+animation: main2-btn 3s infinite;
+}
+@keyframes main2-btn {
+  0%{
+    margin-top:0;
+  } 
+  100%{
+    margin-top: 10px;
+  } 
 }
 .mainAvatar-img {
   border-radius: 50%;
