--- a/src/components/techWriting/TechWriting.css
+++ b/src/components/techWriting/TechWriting.css
@@ -1,23 +1,30 @@
 .techWriting-wrapper {
-  width: 50%;
   margin: 70px auto;
   padding: 120px 0;
   border-bottom: 1px solid #3242aa;
 }
 .techWriting-content {
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-top: 100px;
+  margin: 90px auto;
 }
 .techWriting-main_title {
   color: #3242aa;
-  font-size: 24px;
+  font-size: 18px;
   font-family: "Permanent Marker", cursive;
+  margin: 0 auto;
   margin-bottom: 150px;
   margin-top: -70px;
   text-align: center;
+  background-color: #ccc;
+  border-radius: 4px;
+  width: 180px;
+  text-align: center;
+  padding: 3px 4px;
 }
 .techWriting-title {
   background-color: #fff;
