--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -2,6 +2,7 @@
   padding-top: 70px;
   border-bottom: 1px solid #3242aa;
   height: 80vh;
+  min-height: fit-content;
 }
 .skillsContents {
   display: grid;
@@ -27,6 +28,15 @@
   margin: 10px;
   box-shadow: 1px 2px 4px 3px #3242aa;
   padding: 3px;
+  animation: skills 0.5s
+}
+@keyframes skills {
+  0%{
+    opacity: 0;
+  } 
+  100%{
+    opacity: 1;
+  }
 }
 .skillsImg {
   width: 50px;
