--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
-
+.appTime{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0;
+  margin-left: 200px;
+  color: #ccc;
+}
 .footerArrow {
   background-color: #ccc;
   border-radius: 50%;
