--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -28,6 +28,21 @@
 .headerLogo {
   @apply text-[18px] font-semibold text-[#3242aa] mr-auto mt-2;
 }
+.headerTime{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0;
+  color: #ccc;
+  font-size: 10px;
+  position: absolute;
+  right: 0;
+  margin-top: 50px;
+  background-color: #1c1c1c;
+  padding: 4px 4px;
+  border-radius: 2px;
+  min-width: fit-content;
+}
 .headerMenu-icon {
   display: none !important;
   @apply w-10 h-10 text-[#555] cursor-pointer !important;
